more unused lines removed

--- a/blog/templates/blog/clone_post.html
+++ b/blog/templates/blog/clone_post.html
@@ -23,7 +23,7 @@
           {% endfor %}
         </div>
 
-        <div class="text-danger">
+        <div class="text-red-600 dark:text-flamingo-600">
           {{ form.non_field_errors }}
         </div>
 
@@ -40,10 +40,10 @@
             <span class="text-small text-white-50">{{ form.featured_title.help_text }}</span>
           {% endif %}
           {% for error in form.title.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
           {% for error in form.featured_title.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -56,7 +56,7 @@
             <span class="text-small text-white-50">{{ form.categories.help_text }}</span>
           {% endif %}
           {% for error in form.categories.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -67,7 +67,7 @@
             <span class="text-small text-white-50">{{ form.tags.help_text }}</span>
           {% endif %}
           {% for error in form.tags.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -83,7 +83,7 @@
             <span class="text-small text-white-50">{{ form.series.help_text }}</span>
           {% endif %}
           {% for error in form.series.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -96,7 +96,7 @@
             <span class="text-small text-white-50">{{ form.description.help_text }}</span>
           {% endif %}
           {% for error in form.description.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -108,7 +108,7 @@
             <span class="text-small text-white-50">{{ form.body.help_text }}</span>
           {% endif %}
           {% for error in form.body.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -121,7 +121,7 @@
             <span class="text-small text-white-50">{{ form.image.help_text }}</span>
           {% endif %}
           {% for error in form.image.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -134,7 +134,7 @@
             <span class="text-small text-white-50">{{ form.withdrawn.help_text }}</span>
           {% endif %}
           {% for error in form.withdrawn.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -147,7 +147,7 @@
             <span class="text-small text-white-50">{{ form.is_outdated.help_text }}</span>
           {% endif %}
           {% for error in form.is_outdated.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -160,7 +160,7 @@
             <span class="text-small text-white-50">{{ form.featuring_state.help_text }}</span>
           {% endif %}
           {% for error in form.featuring_state.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -173,7 +173,7 @@
             <span class="text-small text-white-50">{{ form.publication_state.help_text }}</span>
           {% endif %}
           {% for error in form.publication_state.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -184,7 +184,7 @@
             <span class="text-small text-white-50">{{ form.pub_date.help_text }}</span>
           {% endif %}
           {% for error in form.pub_date.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -201,10 +201,10 @@
             <span class="text-small text-white-50">{{ form.url_to_article_title.help_text }}</span>
           {% endif %}
           {% for error in form.url_to_article.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
           {% for error in form.url_to_article_title.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -217,11 +217,11 @@
             <span class="text-small text-white-50">{{ form.language.help_text }}</span>
           {% endif %}
           {% for error in form.language.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
-        <button type="submit" class="btn btn-primary">{{ title }}</button>
+        <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
       </form>
     </div>
   </div>
