--- a/blog/templates/blog/lists/series_list.html
+++ b/blog/templates/blog/lists/series_list.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base_post.html' %}
+{% extends 'sub_base_main_block.html' %}
 {% load super_buttons cards %}
 
 {% block content_main %}
