--- a/blog/templates/blog/lists/tag_list.html
+++ b/blog/templates/blog/lists/tag_list.html
@@ -1,5 +1,4 @@
-{% extends 'blog/base_post.html' %}
-{% load super_buttons cards %}
+{% extends 'sub_base_main_block.html' %}
 
 {% block content_main %}
   {% include 'tailwind/card_container.html' with object_list=tags %}
