--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -1,4 +1,4 @@
-{% load cards super_buttons %}
+{% load cards %}
 
 {% comment %} If the template is a list, show this, else hide it {% endcomment %}
 <section class="relative divide-y-2 divide-gray-300 dark:divide-jumbo-100">
