--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base_post.html' %}
+{% extends 'sub_base_main_block.html' %}
 
 {% block content_main %}
   {% include 'tailwind/card_container.html' with object_list=posts %}
