--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base_post.html' %}
+{% extends 'sub_base_main_block.html' %}
 {% load static comments comments_xtd super_buttons markdown_extra %}
 
 {% block additional_css %}
