--- a/khoBlog/templates/authentication/includes/signup_form.html
+++ b/khoBlog/templates/authentication/includes/signup_form.html
@@ -15,7 +15,7 @@
         {% endfor %}
       </div>
 
-      <div class="text-danger">
+      <div class="text-red-600 dark:text-flamingo-600">
         {{ form.non_field_errors }}
       </div>
 
@@ -28,7 +28,7 @@
           <span class="text-small text-white-50">{{ form.username.help_text }}</span>
         {% endif %}
         {% for error in form.username.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
+          <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
         {% endfor %}
       </div>
 
@@ -41,7 +41,7 @@
           <span class="text-small text-white-50">{{ form.email.help_text }}</span>
         {% endif %}
         {% for error in form.email.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
+          <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
         {% endfor %}
       </div>
 
@@ -58,10 +58,10 @@
           <span class="text-small text-white-50">{{ form.last_name.help_text }}</span>
         {% endif %}
         {% for error in form.first_name.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
+          <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
         {% endfor %}
         {% for error in form.last_name.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
+          <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
         {% endfor %}
       </div>
 
@@ -74,7 +74,7 @@
           <span class="text-small text-white-50">{{ form.password1.help_text|safe }}</span>
         {% endif %}
         {% for error in form.password1.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
+          <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
         {% endfor %}
       </div>
 
@@ -87,7 +87,7 @@
           <span class="text-small text-white-50">{{ form.password2.help_text|safe }}</span>
         {% endif %}
         {% for error in form.password2.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
+          <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
         {% endfor %}
       </div>
 
@@ -98,11 +98,11 @@
           <span class="text-small text-white-50">{{ form.captcha.help_text }}</span>
         {% endif %}
         {% for error in form.captcha.errors %}
-          <small class="form-text text-danger">{{ error }}</small>
+          <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
         {% endfor %}
       </div>
 
-      <button type="submit" class="btn btn-primary">{{ title }}</button>
+      <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
     </form>
   </div>
   <div class="card-footer">
