--- a/khoBlog/templates/extras/form_field_extra.html
+++ b/khoBlog/templates/extras/form_field_extra.html
@@ -28,5 +28,5 @@
 {% endif %}
 
 {% for error in field.errors %}
-  <small class="form-text text-danger">{{ error }}</small>
+  <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
 {% endfor %}
