--- a/pages/templates/pages/page_add.html
+++ b/pages/templates/pages/page_add.html
@@ -8,19 +8,15 @@
 {% endblock additional_css %}
 
 {% block main %}
-  <div class="card formcard">
-    <div class="card-body">
-      <form enctype="multipart/form-data" method="post" novalidate="novalidate">
-        <div class="text-danger">
-          {{ form.non_field_errors }}
-        </div>
-
-        {% form form %}
-
-          <button type="submit" class="btn btn-primary">{{ title }}</button>
-        </form>
-      </div>
+  <form enctype="multipart/form-data" method="post" novalidate="novalidate">
+    <div class="text-red-600 dark:text-flamingo-600">
+      {{ form.non_field_errors }}
     </div>
-    {{ form.media }}
 
-  {% endblock main %}
+    {% form form %}
+
+      <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
+    </form>
+  {{ form.media }}
+
+{% endblock main %}
