--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -12,5 +12,5 @@
     {% endfor %}
   </ul>
 
-  <a class="btn btn-primary" href="{% url 'polls:detail' question.id %}">Vote again ?</a>
+  <a class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" href="{% url 'polls:detail' question.id %}">Vote again ?</a>
 {% endblock main %}
