--- a/portfolio/templates/portfolio/create_project.html
+++ b/portfolio/templates/portfolio/create_project.html
@@ -17,7 +17,7 @@
           {% endfor %}
         </div>
 
-        <div class="text-danger">
+        <div class="text-red-600 dark:text-flamingo-600">
           {{ form.non_field_errors }}
         </div>
 
@@ -30,7 +30,7 @@
             <span class="text-small text-white-50">{{ form.title.help_text }}</span>
           {% endif %}
           {% for error in form.title.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -43,7 +43,7 @@
             <span class="text-small text-white-50">{{ form.snippet.help_text }}</span>
           {% endif %}
           {% for error in form.snippet.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -56,7 +56,7 @@
             <span class="text-small text-white-50">{{ form.description.help_text }}</span>
           {% endif %}
           {% for error in form.description.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -69,7 +69,7 @@
             <span class="text-small text-white-50">{{ form.learned.help_text }}</span>
           {% endif %}
           {% for error in form.learned.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -84,7 +84,7 @@
             <span class="text-small text-white-50">{{ form.technology.help_text }}</span>
           {% endif %}
           {% for error in form.technology.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -99,7 +99,7 @@
             <span class="text-small text-white-50">{{ form.website.help_text }}</span>
           {% endif %}
           {% for error in form.website.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -114,7 +114,7 @@
             <span class="text-small text-white-50">{{ form.repository.help_text }}</span>
           {% endif %}
           {% for error in form.repository.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
@@ -126,11 +126,11 @@
             <span class="text-small text-white-50">{{ form.slug.help_text }}</span>
           {% endif %}
           {% for error in form.slug.errors %}
-            <small class="form-text text-danger">{{ error }}</small>
+            <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
         </div>
 
-        <button type="submit" class="btn btn-primary">{{ title }}</button>
+        <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
       </form>
     </div>
   </div>
