--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -23,10 +23,12 @@
                   <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300 sm:pl-6">ID</th>
                   <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300">Title</th>
                   <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300">Description</th>
-                  <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300">Withdrawn</th>
-                  <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                    <span class="sr-only">Actions</span>
-                  </th>
+                  {% if user.is_superuser %}
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300">Withdrawn</th>
+                    <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
+                      <span class="sr-only">Actions</span>
+                    </th>
+                  {% endif %}
                 </tr>
               </thead>
               <tbody class="bg-white divide-y divide-gray-200 dark:bg-jumbo-700 dark:divide-jumbo-300">
@@ -35,14 +37,16 @@
                     <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 dark:text-jumbo-300 sm:pl-6">{{ task.pk }}</td>
                     <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.title }}</td>
                     <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.description }}</td>
-                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.withdrawn }}</td>
-                    <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                      {% if not task.complete %}
+                    {% if user.is_superuser %}
+                      <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.withdrawn }}</td>
+                      <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
+                        {% if not task.complete %}
                         <a class="text-cyan-500 hover:text-cyan-600 dark:text-cyan-400 dark:hover:text-cyan-600" href="{% url 'todo:complete_task' task.id %}">Complete</a>
-                      {% endif %}
-                      <a class="text-indigo-600 hover:text-indigo-900 dark:text-indigo-200 dark:hover:text-indigo-500" href="{% url 'todo:edit_task' task.id %}">Edit</a>
-                      <a class="text-flamingo hover:text-flamingo-700 dark:text-flamingo-200 dark:hover:text-flamingo-500" href="{% url 'todo:delete' task.id %}">Delete</a>
-                    </td>
+                        {% endif %}
+                        <a class="text-indigo-600 hover:text-indigo-900 dark:text-indigo-200 dark:hover:text-indigo-500" href="{% url 'todo:edit_task' task.id %}">Edit</a>
+                        <a class="text-flamingo hover:text-flamingo-700 dark:text-flamingo-200 dark:hover:text-flamingo-500" href="{% url 'todo:delete' task.id %}">Delete</a>
+                      </td>
+                    {% endif %}
                   </tr>
                 {% endfor %}
               </tbody>
