--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -1,17 +1,46 @@
 {% load cards %}
 
-{% comment %} If the template is a list, show this, else hide it {% endcomment %}
-<section class="relative divide-y-2 divide-gray-300 dark:divide-jumbo-100">
+<section{% if filter_form %} x-data="{ open: false }" aria-labelledby="filter-heading"{% endif %} class="relative divide-y-2 divide-gray-300 dark:divide-jumbo-600">
   <section>
     <h2 class="text-3xl tracking-tight font-extrabold text-gray-900 dark:text-jumbo-100 sm:text-4xl">
       {{ title }}
     </h2>
-    <p class="text-lg font-bold lg:col-span-2 dark:text-jumbo-50 mt-3 sm:mt-4">
-      {{ description }}
-    </p>
-    {% comment %} https://tailwindui.com/components/marketing/sections/blog-sections Add top page superbuttons (edit if it's a list of posts in a category or tag, maybe user buttons as well) {% endcomment %}
+    <div class="block sm:flex gap-2 mt-3 sm:mt-4">
+      <p class="text-lg font-bold sm:flex-grow dark:text-jumbo-50">
+        {{ description }}
+      </p>
+      {% if filter_form %}
+        <!-- Filters -->
+        <section class="w-auto">
+          <button type="button" class="group text-gray-900 dark:text-jumbo-100 font-medium flex items-center" aria-controls="disclosure-1" @click="open = !open" aria-expanded="false" x-bind:aria-expanded="open.toString()">
+            <svg class="flex-none w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" aria-hidden="true" x-description="Heroicon name: solid/filter" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+              <path fill-rule="evenodd" d="M3 3a1 1 0 011-1h12a1 1 0 011 1v3a1 1 0 01-.293.707L12 11.414V15a1 1 0 01-.293.707l-2 2A1 1 0 018 17v-5.586L3.293 6.707A1 1 0 013 6V3z" clip-rule="evenodd"></path>
+            </svg>
+            Filters
+          </button>
+          <h2 id="filter-heading" class="sr-only">Filters</h2>
+        </section>
+      {% endif %}
+    </div>
   </section>
-  <section class="mt-6 pt-10 grid gap-16 lg:grid-cols-2 lg:gap-x-5 lg:gap-y-12">
+
+  {% if filter_form %}
+    {% load project_tags %}
+
+    <section id="disclosure-1" x-show="open" style="display: none;" class="mt-6 pt-10">
+      <form method="get">
+        <div class="text-danger">
+          {{ form.non_field_errors }}
+        </div>
+
+        {% form_get filter_form.form %}
+
+        <input class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" type="submit"/>
+      </form>
+    </section>
+  {% endif %}
+
+  <section class="mt-6 pt-10 grid gap-16 sm:grid-cols-2 sm:gap-x-5 sm:gap-y-12">
     {% for object in object_list %}
       {% cards object %}
     {% endfor %}
