--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -25,17 +25,48 @@
   </section>
 
   {% if filter_form %}
-    {% load project_tags %}
+    {% load project_tags widget_tweaks %}
 
     <section id="disclosure-1" x-show="open" style="display: none;" class="mt-6 pt-10">
-      <form method="get">
-        <div class="text-danger">
-          {{ form.non_field_errors }}
+      <form method="get" class="grid grid-cols-1 md:grid-cols-2 md:grid-rows-2 xl:grid-cols-3 xl:grid-rows-3 md:grid-flow-col gap-2 h-fit">
+        <div class="h-fit">
+          {{ filter_form.form.title.label_tag }}
+          {{ filter_form.form.title|add_class:"form-control"|attr:"placeholder:Post title" }}
         </div>
 
-        {% form_get filter_form.form %}
+        <div class="h-fit">
+          {{ filter_form.form.slug.label_tag }}
+          {{ filter_form.form.slug|add_class:"form-control"|attr:"placeholder:Post slug" }}
+        </div>
 
-        <input class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" type="submit"/>
+        <div class="h-fit">
+          {{ filter_form.form.description.label_tag }}
+          {{ filter_form.form.description|add_class:"form-control"|attr:"placeholder:Post description" }}
+        </div>
+
+        <div class="h-fit md:row-start-1">
+          {{ filter_form.form.categories.label_tag }}
+          {{ filter_form.form.categories|add_class:"form-control" }}
+        </div>
+
+        <div class="h-fit">
+          {{ filter_form.form.tags.label_tag }}
+          {{ filter_form.form.tags|add_class:"form-control" }}
+        </div>
+
+        <div class="h-fit">
+          {{ filter_form.form.language.label_tag }}
+          {{ filter_form.form.language|add_class:"form-control" }}
+        </div>
+
+        <div class="row-start-4 md:col-start-1 md:col-span-2 xl:col-start-3 xl:row-span-full h-fit">
+          {{ filter_form.form.body.label_tag }}
+          {{ filter_form.form.body|add_class:"form-control"|attr:"placeholder:Post body" }}
+        </div>
+
+        <div class="col-start-1 md:row-start-5 xl:row-start-4 w-fit">
+          <input class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" type="submit"/>
+        </div>
       </form>
     </section>
   {% endif %}
