--- a/pages/templates/pages/create_page.html
+++ b/pages/templates/pages/create_page.html
@@ -1,6 +1,12 @@
 {% extends 'pages/base_page.html' %}
 {% load static project_tags compress %}
 
+{% block additional_css %}
+  {% compress css %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="{% static 'khoBlog/css/selectize.min.css' %}">
+  {% endcompress css %}
+{% endblock additional_css %}
 
 {% block main %}
   <form enctype="multipart/form-data" method="post" novalidate="novalidate">
@@ -13,5 +19,4 @@
     <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
   </form>
   {{ form.media }}
-
 {% endblock main %}
