--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -206,6 +206,26 @@
         @apply my-0 inline;
     }
 
+    .prose .highlighttable {
+        @apply block overflow-x-auto resize-x;
+    }
+
+    .prose .highlighttable * {
+        @apply p-0 rounded-none;
+    }
+
+    .prose .highlighttable pre {
+        @apply m-0 p-4;
+    }
+
+    .prose .highlighttable .code pre {
+        @apply bg-[#002b36] text-[#839496];
+    }
+
+    .prose .highlighttable .linenos {
+        @apply select-none;
+    }
+
     .dropdown_item {
         @apply dark:text-jumbo-50 dark:hover:bg-jumbo-800 hover:dropdown_item_active dark:disabled:bg-jumbo-900 block px-4 py-2 text-sm text-gray-700 disabled:cursor-not-allowed disabled:bg-gray-400 disabled:hover:text-gray-700 disabled:dark:hover:text-jumbo-50;
     }
