--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -1,8 +1,11 @@
 {% extends 'sub_base_main.html' %}
 {% load static widget_tweaks project_tags markdown_extra compress %}
 
+{% block additional_js %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+{% endblock additional_js %}
+
 {% block additional_css %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   {% compress css %}
   <link rel="stylesheet" href="{% static 'khoBlog/css/selectize.min.css' %}">
   {% endcompress css %}
