--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -6,7 +6,7 @@
 {% endblock additional_js %}
 
 {% block additional_css %}
-  <link rel="stylesheet" href="{% static 'khoBlog/css/selectize.min.css' %}">
+  <link rel="stylesheet" href="{% static 'khoBlog/css/selectize.default.css' %}">
 {% endblock additional_css %}
 
 {% block main %}
