Super "Add Element" button Actually kinda clean I think

--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -1,4 +1,4 @@
-{% load static socialaccount analytical google_analytics_gtag tailwind_tags theme_buttons %}
+{% load static analytical google_analytics_gtag tailwind_tags theme_buttons %}
 
 <!DOCTYPE html>
 <html lang="en">
