--- a/khoBlog/templates/tailwind/content_super_buttons.html
+++ b/khoBlog/templates/tailwind/content_super_buttons.html
@@ -1,6 +1,6 @@
 <section class="mt-4 flex space-x-3 md:mt-0">
   <div class="mx-auto w-full text-right">
-    <a href="{{ create_url }}" type="button" class="inline-flex items-center px-4 py-2 border shadow-sm text-sm font-medium rounded-md kho-button-border kho-button-border-focus kho-button-bg kho-button-bg-hover kho-button-text">
+    <a href="{{ create_url }}" class="hover:underline">
       Add {{ object }}
     </a>
   </div>
