--- a/khoBlog/templates/tailwind/content_super_buttons.html
+++ b/khoBlog/templates/tailwind/content_super_buttons.html
@@ -1,5 +1,5 @@
-<section class="mt-4 flex space-x-3 md:mt-0">
-  <div class="mx-auto w-full text-right">
+<section class="w-auto text-gray-900 dark:text-jumbo-100 font-medium flex items-center">
+  <div class="mx-auto w-full">
     <a href="{{ create_url }}" class="hover:underline">
       Add {{ object }}
     </a>
