--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -142,12 +142,12 @@
       <div class="max-w-7xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
         <nav class="-mx-5 -my-2 flex flex-wrap justify-center" aria-label="Footer">
           <div class="px-5 py-2">
-            <a href="{% url 'pages:about' %}" class="text-base text-gray-500 hover:text-gray-900 dark:hover:text-jumbo-100">
+            <a href="{% url 'pages:about' %}" class="text-base text-gray-500 dark:text-jumbo-50 hover:underline">
               About
             </a>
           </div>
           <div class="px-5 py-2">
-            <a href="{% url 'blog:post_list' %}" class="text-base text-gray-500 hover:text-gray-900 dark:hover:text-jumbo-100">
+            <a href="{% url 'blog:post_list' %}" class="text-base text-gray-500 dark:text-jumbo-50 hover:underline">
               Blog
             </a>
           </div>
