--- a/khoBlog/templates/account/signup.html
+++ b/khoBlog/templates/account/signup.html
@@ -1,4 +1,4 @@
-{% extends 'sub_base.html' %}
+{% extends 'tailwind/base.html' %}
 
 {% block content %}
   {% include 'authentication/includes/signup_form.html' %}
