--- a/khoBlog/templates/account/verification_sent.html
+++ b/khoBlog/templates/account/verification_sent.html
@@ -1,4 +1,4 @@
-{% extends "sub_base.html" %}
+{% extends "sub_base_main_block.html" %}
 
 {% block content %}
   <p>We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.</p>
