--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -1,5 +1,5 @@
-{% extends 'pages/base_page.html' %}
+{% extends 'tailwind/base.html' %}
 
-{% block main %}
+{% block content %}
   {% include 'tailwind/card_container.html' with object_list=pages %}
-{% endblock main %}
+{% endblock content %}
