--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -1,5 +1,5 @@
-{% extends 'sub_base_main.html' %}
+{% extends 'tailwind/base.html' %}
 
-{% block main %}
+{% block content %}
   {% include 'tailwind/card_container.html' with object_list=projects %}
-{% endblock main %}
+{% endblock content %}
