--- a/todo/templates/todo/edit_task.html
+++ b/todo/templates/todo/edit_task.html
@@ -1,4 +1,4 @@
-{% extends 'sub_base.html' %}
+{% extends 'tailwind/base.html' %}
 
 {% block content %}
   <form method="post" novalidate="novalidate">
