--- a/blog/templates/blog/category_confirm_delete.html
+++ b/blog/templates/blog/category_confirm_delete.html
@@ -1,7 +1,7 @@
-{% extends 'sub_base_main.html' %}
+{% extends 'tailwind/base.html' %}
 {% load widget_tweaks project_tags %}
 
-{% block main %}
+{% block content %}
   <h3>Delete:
     {{ category.id }}
     -
@@ -13,4 +13,4 @@
       <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-2">{{ title }}</button>
     </form>
     {{ form.media }}
-  {% endblock main %}
+  {% endblock content %}
