--- a/blog/templates/blog/comments/comment_list.html
+++ b/blog/templates/blog/comments/comment_list.html
@@ -1,7 +1,7 @@
-{% extends 'sub_base_main.html' %}
+{% extends 'tailwind/base.html' %}
 {% load comments_xtd %}
 
-{% block main %}
+{% block content %}
   {% get_last_xtdcomments 255 as comments for blog.post pages.page %}
 
   {% for comment in comments %}
@@ -13,4 +13,4 @@
         {{ comment }}</a>
     </div>
   {% endfor %}
-{% endblock main %}
+{% endblock content %}
