--- a/blog/templates/blog/create_series.html
+++ b/blog/templates/blog/create_series.html
@@ -1,7 +1,7 @@
-{% extends 'sub_base_main.html' %}
+{% extends 'tailwind/base.html' %}
 {% load static project_tags %}
 
-{% block main %}
+{% block content %}
   <div class="card formcard">
     <div class="card-body">
       <form method="post" novalidate="novalidate">
@@ -16,4 +16,4 @@
       </div>
     </div>
 
-  {% endblock main %}
+  {% endblock content %}
