--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -1,4 +1,4 @@
-{% extends 'sub_base_main.html' %}
+{% extends 'tailwind/base.html' %}
 {% load static widget_tweaks project_tags markdown_extra compress %}
 
 {% block additional_js %}
@@ -11,7 +11,7 @@
   {% endcompress css %}
 {% endblock additional_css %}
 
-{% block main %}
+{% block content %}
   <form enctype="multipart/form-data" method="post" novalidate="novalidate">
     {% csrf_token %}
     <div class="non-field-errors">
@@ -247,4 +247,4 @@
   </form>
   {{ form.media }}
 
-{% endblock main %}
+{% endblock content %}
