--- a/khoBlog/templates/account/edit_profile.html
+++ b/khoBlog/templates/account/edit_profile.html
@@ -1,4 +1,4 @@
-{% extends 'sub_base.html' %}
+{% extends 'tailwind/base.html' %}
 {% load widget_tweaks socialaccount project_tags %}
 
 {% block content %}
