--- a/khoBlog/templates/account/email.html
+++ b/khoBlog/templates/account/email.html
@@ -1,4 +1,4 @@
-{% extends "sub_base.html" %}
+{% extends "sub_base_main_block.html" %}
 {% load i18n widget_tweaks project_tags %}
 
 {% block content %}
