--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -1,4 +1,4 @@
-{% extends "sub_base.html" %}
+{% extends "sub_base_main_block.html" %}
 {% load static account socialaccount super_buttons %}
 
 {% block content %}
