--- a/pages/templates/pages/create_page.html
+++ b/pages/templates/pages/create_page.html
@@ -1,4 +1,4 @@
-{% extends 'pages/base_page.html' %}
+{% extends 'tailwind/base.html' %}
 {% load static project_tags compress %}
 
 {% block additional_js %}
@@ -11,7 +11,7 @@
   {% endcompress css %}
 {% endblock additional_css %}
 
-{% block main %}
+{% block content %}
   <form enctype="multipart/form-data" method="post" novalidate="novalidate">
     <div class="text-red-600 dark:text-flamingo-600">
       {{ form.non_field_errors }}
@@ -22,4 +22,4 @@
     <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
   </form>
   {{ form.media }}
-{% endblock main %}
+{% endblock content %}
