--- a/pages/templates/pages/default.html
+++ b/pages/templates/pages/default.html
@@ -1,4 +1,4 @@
-{% extends 'pages/base_page.html' %}
+{% extends 'tailwind/base.html' %}
 {% load comments comments_xtd super_buttons %}
 
 {% block page_head %}
@@ -11,13 +11,13 @@
   {{ block.super }}
 {% endblock page_head %}
 
-{% block main %}
+{% block content %}
   {% if not page.withdrawn or user.is_superuser %}
     <div class="xl:grid xl:grid-cols-3">
       <div class="xl:col-span-2 xl:pr-8">
         <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
           <div>
-            <h1 class="text-2xl font-bold text-jumbo-900 dark:text-jumbo-300">{{ page.title }}</h1>
+            <span class="text-2xl font-bold text-jumbo-900 dark:text-jumbo-300">{{ page.title }}</span>
             <p class="mt-2 text-sm text-jumbo-500">
               Page <span class="font-bold">#{{ page.pk }}</span>
             </p>
@@ -40,4 +40,4 @@
       <a class="btn btn-danger" href="{% url 'pages:kheee' %}">{{ description }}</a>
     </h1>
   {% endif %}
-{% endblock main %}
+{% endblock content %}
