--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,6 +1,6 @@
-{% extends 'polls/base_polls.html' %}
+{% extends 'tailwind/base.html' %}
 
-{% block main %}
+{% block content %}
   <h4>{{ question.title }}</h4>
   <a href="{% url 'polls:results' question.id %}">See the results without voting</a>
 
@@ -18,4 +18,4 @@
     {% endfor %}
     <input class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-2" type="submit" value="Vote">
   </form>
-{% endblock main %}
+{% endblock content %}
