--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,6 +1,6 @@
-{% extends 'polls/base_polls.html' %}
+{% extends 'tailwind/base.html' %}
 
-{% block main %}
+{% block content %}
   <h4>{{ question.title }}</h4>
 
   <ul class="mb-2">
@@ -13,4 +13,4 @@
   </ul>
 
   <a class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" href="{% url 'polls:detail' question.id %}">Vote again ?</a>
-{% endblock main %}
+{% endblock content %}
