--- a/portfolio/templates/portfolio/edit_sub_project.html
+++ b/portfolio/templates/portfolio/edit_sub_project.html
@@ -1,7 +1,7 @@
-{% extends 'sub_base_main.html' %}
+{% extends 'tailwind/base.html' %}
 {% load widget_tweaks project_tags %}
 
-{% block main %}
+{% block content %}
   <div class="card formcard">
     <div class="card-body">
       <form enctype="multipart/form-data" method="post" novalidate="novalidate">
@@ -118,4 +118,4 @@
     </div>
   </div>
 
-{% endblock main %}
+{% endblock content %}
