--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -1,12 +1,12 @@
-{% extends 'sub_base_main.html' %}
+{% extends 'tailwind/base.html' %}
 {% load super_buttons markup_tags cards %}
 
-{% block main %}
+{% block content %}
   <article class="xl:grid xl:grid-cols-3">
     <div class="xl:col-span-2 xl:pr-8">
       <section class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
         <div>
-          <h1 class="text-2xl font-bold text-jumbo-900 dark:text-jumbo-300">{{ project.title }}</h1>
+          <span class="text-2xl font-bold text-jumbo-900 dark:text-jumbo-300">{{ project.title }}</span>
           <p class="mt-2 text-sm text-jumbo-500">
             Project <span class="font-bold">#{{ project.pk }}</span>
           </p>
@@ -73,4 +73,4 @@
       {% endif %}
     </div>
   </article>
-{% endblock main %}
+{% endblock content %}
