--- a/portfolio/templates/portfolio/sub_project_detail.html
+++ b/portfolio/templates/portfolio/sub_project_detail.html
@@ -1,39 +1,65 @@
-{% extends 'sub_base_main.html' %}
+{% extends 'tailwind/base.html' %}
 {% load super_buttons markup_tags %}
 
-{% block main %}
-  <div class="card mb-2">
-    <div class="card-header d-flex">
-      <span class="col">
-        <h2>Sub Project #{{ subproject.id }}</h2>
-      </span>
-      <span class="col-auto">
-        {% if user.is_superuser %}
-          {% sb subproject %}
-        {% endif %}
-      </span>
-    </div>
-
-    <div class="card-body">
-      <h2 class="card-title">{{ subproject.title }}</h2>
-      <p class="card-text">{{ subproject.description }}</p>
-      {% if subproject.learned %}
-        <div class="card-text">
-          <span class="text-white-50 d-block">Had to learn:</span>
-          {{ subproject.learned|apply_markup:"markdown"|apply_markup:"widont" }}
+{% block content %}
+  <article class="xl:grid xl:grid-cols-3">
+    <div class="xl:col-span-2 xl:pr-8">
+      <section class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
+        <div>
+          <span class="text-2xl font-bold text-jumbo-900 dark:text-jumbo-300">{{ project.title }}</span>
+          <p class="mt-2 text-sm text-jumbo-500">
+            Sub Project <span class="font-bold">#{{ project.pk }}</span>
+          </p>
         </div>
-      {% endif %}
-    </div>
+        {% if user.is_superuser %}
+          {% sb project %}
+        {% endif %}
+      </section>
+      <section class="py-3 xl:pt-6 xl:pb-0">
+        <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+          {% autoescape off %}
+            {{ project.content }}
+          {% endautoescape %}
+        </div>
+      </section>
+      <section class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+        <h1>{{ project.title }}</h1>
+        {% if project.learned %}
+          <div>
+            <span class="text-white-50 d-block">Had to learn:</span>
+            {{ project.learned|apply_markup:"markdown"|apply_markup:"widont" }}
+          </div>
+        {% endif %}
+        {% if project.website or project.technology %}
+          {% if project.website %}
+            <p>Website:
+              <a target="_blank" class="no-underline hover:underline" href="{{ project.website.url }}" rel="noopener noreferrer">{{ project.website }}</a>
+            </p>
+          {% endif %}
+          {% if project.technology %}
+            <div>
+              Made with:
+              <a target="_blank" class="no-underline hover:underline" href="{{ project.technology.website }}" rel="noopener noreferrer">{{ project.technology }}</a>
+              <br/>
+              <span>{{ project.technology.description }}</span>
+            </div>
+          {% endif %}
+          {% if project.repository %}
+            <p>Repository:
+              <a target="_blank" class="no-underline hover:underline" href="{{ project.repository.url }}" rel="noopener noreferrer">{{ project.repository }}</a>
+            </p>
+          {% endif %}
+        {% endif %}
 
-    <div class="card-footer">
-      <p class="card-text">Parent Project
-        <a href="{{ subproject.parent_project.get_absolute_url }}">{{ subproject.parent_project }}</a>
-      </p>
-      {% if subproject.link_in_repo %}
-        <p class="card-text">Folder in Repository:
-          <a target="_blank" href="{{ subproject.parent_project.repository.url }}/{{ subproject.link_in_repo }}" rel="noopener noreferrer">{{ subproject.parent_project.repository.url }}/{{ subproject.link_in_repo }}</a>
+        <p>Parent Project
+          <a href="{{ project.parent_project.get_absolute_url }}">{{ project.parent_project }}</a>
         </p>
-      {% endif %}
+        {% if project.link_in_repo %}
+          <p>Folder in Repository:
+            <a target="_blank" href="{{ project.parent_project.repository.url }}/{{ project.link_in_repo }}" rel="noopener noreferrer">{{ project.parent_project.repository.url }}/{{ project.link_in_repo }}</a>
+          </p>
+        {% endif %}
+      </section>
     </div>
-  </div>
-{% endblock main %}
+  </article>
+{% endblock content %}
