--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -54,7 +54,7 @@
     }
 
     .flyout_button {
-        @apply dark:bg-jumbo-900 dark:hover:text-jumbo-50 dark:focus:ring-flamingo-600/75 inline-flex items-center rounded-md bg-white text-base font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2;
+        @apply dark:hover:text-jumbo-50 dark:focus:ring-flamingo-600/75 inline-flex items-center rounded-md text-base font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2;
     }
 
     .flyout_bottom_items {
@@ -62,7 +62,7 @@
     }
 
     .mobile_menu_grid_items {
-        @apply dark:text-jumbo-50 rounded-md text-base font-medium text-gray-900 hover:text-gray-700;
+        @apply dark:text-jumbo-50 dark:hover:text-jumbo-100 rounded-md text-base font-medium text-gray-900 hover:text-gray-700;
     }
 
     .profile_tab {
